--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "Constructor-Word-Guess",
+  "name": "IA-solved",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/iarcones/Constructor-Word-Guess.git"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/iarcones/Constructor-Word-Guess/issues"
-  },
-  "homepage": "https://github.com/iarcones/Constructor-Word-Guess#readme",
   "dependencies": {
-    "inquirer": "^6.2.1"
+    "colors": "^1.3.3",
+    "inquirer": "^6.5.1",
+    "random-words": "^1.1.0"
   }
 }
